Add User Register, model OtpCode , OtpCode register

--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -6,12 +6,8 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url "home:home" %}">Home</a>
         </li>
-
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="{% url "accounts:user-register" %}">Register</a>
         </li>
       </ul>
     </div>
