--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -14,7 +14,7 @@ Register
 {% block content %}
 
 
-<form action="" method="post">
+<form action="" method="post" novalidate>
 
 
     {% csrf_token %}
