--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,22 +9,14 @@
   <title>{% block page_title %} {% endblock page_title %}</title>
 
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="{% static 'css/base_styles.css' %}">
 
-  <style>
-    .jombotron {
-      padding: 20px;
-      margin-bottom: 20px;
-      background-color: #e9ecef;
-    }
 
-    body {
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
 
-      font-size: 14px;
+  {% block extra_headers %}
 
-      color: black;
-    }
-  </style>
+  {% endblock extra_headers %}
+
 </head>
 
 <body>
