--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,26 +1,27 @@
 {% extends "_base.html" %}
 {% load static %}
 
-
 {% block page_title %}
-
 Online Shop
-
 {% endblock page_title %}
 
-
 {% block extra_headers %}
-
 <link rel="stylesheet" href="{% static 'home/css/style.css' %}">
-
 {% endblock extra_headers %}
 
-
-
-
 {% block content %}
-
-
-<h3>Hello User</h3>
-
+<div class="container mt-4">
+    <div class="row">
+        {% for product in products %}
+            <div class="col-md-4 mb-4">
+                <div class="card" style="width: 100%;">
+                    <img class="card-img-top img-thumbnail" src="{{ product.image.url }}" alt="{{ product.name }}" style="height: 150px; width: auto; object-fit: contain;">
+                    <div class="card-body">
+                        <a href="{{ product.get_absolute_url }}" class="card-title">{{ product.name }}</a>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock content %}
