--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -6,8 +6,23 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url "home:home" %}">Home</a>
         </li>
+
+
+        {% if request.user.is_authenticated %}
+        
+        
+        <li class="nav-item">
+          <a class="nav-link" href="{% url "accounts:user-logout" %}">Logout</a>
+        </li>
+        
+        
+        {% endif %}
+
         <li class="nav-item">
           <a class="nav-link" href="{% url "accounts:user-register" %}">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url "accounts:user-login" %}">Login</a>
         </li>
       </ul>
     </div>
