--- a/home/templates/home/detail.html
+++ b/home/templates/home/detail.html
@@ -7,12 +7,18 @@ Detail
 {% block content %}
 <div class="container mt-4">
     <div class="row">
-        <div class="col-md-8 offset-md-2">
+        <div class="col-md-6 d-flex align-items-center justify-content-center">
+            <img src="{{ product.image.url }}" alt="{{ product.name }}" class="img-fluid mb-3 rounded" style="max-height: 400px; object-fit: cover;">
+        </div>
+        <div class="col-md-6">
             <h2 class="mb-3">{{ product.name }}</h2>
-            <small class="text-muted">{{ product.created }}</small>
-            <p class="lead mt-3">{{ product.price }}</p>
+            <small class="text-muted">{{ product.created|date:"F j, Y" }}</small>
+            <p class="lead mt-3 font-weight-bold text-primary">{{ product.price }}</p>
             <p>{{ product.description }}</p>
-            <img src="{{ product.image.url }}" alt="{{ product.name }}" class="img-fluid mt-3">
+            <div class="mt-4">
+                <button type="button" class="btn btn-primary btn-lg mr-2">Add to Cart</button>
+                <button type="button" class="btn btn-outline-secondary btn-lg">Buy Now</button>
+            </div>
         </div>
     </div>
 </div>
