--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -12,12 +12,24 @@ Online Shop
 {% block content %}
 <div class="container mt-4">
     <div class="row">
+        <div class="col-12 mb-3">
+            <div class="btn-group" role="group" aria-label="Category buttons">
+                {% for category in categories %}
+                    <a href="{{ category.get_absolute_url }}" class="btn btn-dark">{{ category.name }}</a>
+                {% endfor %}
+            </div>
+        </div>
+
         {% for product in products %}
             <div class="col-md-4 mb-4">
-                <div class="card" style="width: 100%;">
-                    <img class="card-img-top img-thumbnail" src="{{ product.image.url }}" alt="{{ product.name }}" style="height: 150px; width: auto; object-fit: contain;">
-                    <div class="card-body">
-                        <a href="{{ product.get_absolute_url }}" class="card-title">{{ product.name }}</a>
+                <div class="card h-100">
+                    <img class="card-img-top img-thumbnail" src="{{ product.image.url }}" alt="{{ product.name }}" style="height: 150px; width: 100%; object-fit: contain;">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title"><a href="{{ product.get_absolute_url }}" class="stretched-link">{{ product.name }}</a></h5>
+                        <p class="card-text mt-auto">{{ product.description|truncatewords:20 }}</p>
+                        <div class="mt-3">
+                            <span class="badge badge-primary">{{ product.price }}</span>
+                        </div>
                     </div>
                 </div>
             </div>
