--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,39 +1,56 @@
 {% extends "_base.html" %}
 {% load static %}
 
-{% block page_title %}
-Online Shop
-{% endblock page_title %}
+{% block page_title %} Online Shop {% endblock page_title %}
 
 {% block extra_headers %}
-<link rel="stylesheet" href="{% static 'home/css/style.css' %}">
+<link rel="stylesheet" href="{% static 'home/css/style.css' %}" />
 {% endblock extra_headers %}
 
 {% block content %}
 <div class="container mt-4">
-    <div class="row">
-        <div class="col-12 mb-3">
-            <div class="btn-group" role="group" aria-label="Category buttons">
-                {% for category in categories %}
-                    <a href="{{ category.get_absolute_url }}" class="btn btn-dark">{{ category.name }}</a>
-                {% endfor %}
-            </div>
-        </div>
-
-        {% for product in products %}
-            <div class="col-md-4 mb-4">
-                <div class="card h-100">
-                    <img class="card-img-top img-thumbnail" src="{{ product.image.url }}" alt="{{ product.name }}" style="height: 150px; width: 100%; object-fit: contain;">
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title"><a href="{{ product.get_absolute_url }}" class="stretched-link">{{ product.name }}</a></h5>
-                        <p class="card-text mt-auto">{{ product.description|truncatewords:20 }}</p>
-                        <div class="mt-3">
-                            <span class="badge badge-primary">{{ product.price }}</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+  <div class="row">
+    <div class="col-12 mb-3">
+      <ul class="nav nav-pills mb-3">
+        {% for category in categories %}
+        <li class="nav-item dropdown">
+          <a  style="margin-right: 10px; " class="nav-link btn btn-outline-danger me-2 mb-2"  role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{ category.name }}
+          </a>
+          <div class="dropdown-menu" aria-labelledby="category{{ category.id }}">
+            {% for subcategory in category.scategory.all %}
+            <a class="dropdown-item" href="{{ subcategory.get_absolute_url }}">{{ subcategory.name }}</a>
+            {% endfor %}
+          </div>
+        </li>
         {% endfor %}
+      </ul>
     </div>
+
+    {% for product in products %}
+    <div class="col-md-4 mb-4">
+      <div class="card h-100">
+        <img class="card-img-top img-thumbnail"
+             src="{{ product.image.url }}"
+             alt="{{ product.name }}"
+             style="height: 150px; width: 100%; object-fit: contain">
+        <div class="card-body">
+          <h5 class="card-title">
+            <a href="{{ product.get_absolute_url }}" class="card-link stretched-link">{{ product.name }}</a>
+          </h5>
+          <p class="card-text">{{ product.description|truncatewords:20 }}</p>
+          <div class="mt-3">
+            <span class="badge badge-primary">{{ product.price }}</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
 </div>
+
+<!-- Bootstrap JavaScript dependencies -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+
 {% endblock content %}
