--- a/home/templates/home/detail.html
+++ b/home/templates/home/detail.html
@@ -1,29 +1,27 @@
-{% extends "_base.html" %}
-
-{% block page_title %}
-Detail
-{% endblock page_title %}
-
-{% block content %}
+{% extends "_base.html" %} {% block page_title %} Detail {% endblock page_title %} {% block content %}
 <div class="container mt-4">
-    <div class="row">
-        <div class="col-md-6">
-            <img src="{{ product.image.url }}" alt="{{ product.name }}" class="img-fluid mb-3 rounded" style="max-height: 400px; object-fit: cover;">
-        </div>
-        <div class="col-md-6">
-            <h2 class="mb-3">{{ product.name }}</h2>
-            <p class="text-muted">{{ product.created|date:"F j, Y" }}</p>
-            <h3 class="mb-3 text-primary">{{ product.price }}</h3>
-            <p>{{ product.description }}</p>
-
-            <form action="" method="post" class="mt-4">
-                {% csrf_token %}
-                {{ form }}
-
-                <button type="submit" class="btn btn-primary btn-lg mr-2">Add to Cart</button>
-                <button type="button" class="btn btn-outline-secondary btn-lg">Buy Now</button>
-            </form>
-        </div>
+  <div class="row">
+    <div class="col-md-6">
+      <img
+        src="{{ product.image.url }}"
+        alt="{{ product.name }}"
+        class="img-fluid mb-3 rounded"
+        style="max-height: 400px; object-fit: cover"
+      />
     </div>
+    <div class="col-md-6">
+      <h2 class="mb-3">{{ product.name }}</h2>
+      <p class="text-muted">{{ product.created|date:"F j, Y" }}</p>
+      <h3 class="mb-3 text-primary">{{ product.price }}</h3>
+      <p>{{ product.description }}</p>
+
+      <form action="{%  url 'orders:cart-add' product.id  %}" method="post" class="mt-4">
+        {% csrf_token %} {{ form }}
+
+        <button type="submit" class="btn btn-primary btn-lg mr-2">Add to Cart</button>
+        <button type="button" class="btn btn-outline-secondary btn-lg">Buy Now</button>
+      </form>
+    </div>
+  </div>
 </div>
 {% endblock content %}
