--- a/orders/templates/orders/cart.html
+++ b/orders/templates/orders/cart.html
@@ -1,33 +1,31 @@
-{% extends "_base.html" %} {% block content %}
+{% extends "_base.html" %}
+
+
+
+{% block content %}
 
 <table class="table table-striped table-dark">
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Product</th>
+      <th scope="col">Quantity</th>
+      <th scope="col">Unit Price</th>
+      <th scope="col">Total Price</th>
     </tr>
   </thead>
   <tbody>
+    {% for item in cart %}
+
     <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <th scope="row">{{forloop.counter}}</th>
+      <td>{{item.product}}</td>
+      <td>{{item.quantity}}</td>
+      <td>{{item.price}}</td>
+      <td>{{item.total_price}}</td>
     </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
+
+    {% endfor %}
   </tbody>
 </table>
 
