--- a/orders/templates/orders/cart.html
+++ b/orders/templates/orders/cart.html
@@ -1,32 +1,35 @@
 {% extends "_base.html" %}
 
-
-
 {% block content %}
-
-<table class="table table-striped table-dark">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Product</th>
-      <th scope="col">Quantity</th>
-      <th scope="col">Unit Price</th>
-      <th scope="col">Total Price</th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for item in cart %}
-
-    <tr>
-      <th scope="row">{{forloop.counter}}</th>
-      <td>{{item.product}}</td>
-      <td>{{item.quantity}}</td>
-      <td>{{item.price}}</td>
-      <td>{{item.total_price}}</td>
-    </tr>
-
-    {% endfor %}
-  </tbody>
-</table>
-
+<div class="container mt-5">
+  <h2 class="mb-4">Shopping Cart</h2>
+  <table class="table table-striped table-hover">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Product</th>
+        <th scope="col">Quantity</th>
+        <th scope="col">Unit Price</th>
+        <th scope="col">Total Price</th>
+        <th scope="col">Remove</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for item in cart %}
+      <tr>
+        <th scope="row">{{ forloop.counter }}</th>
+        <td>{{ item.product }}</td>
+        <td>{{ item.quantity }}</td>
+        <td>${{ item.price|floatformat:2 }}</td>
+        <td>${{ item.total_price|floatformat:2 }}</td>
+        <td><a href="{% url "orders:cart-remove" item.product.id %}">Remove</a></td>
+      </tr>
+      {% endfor %}
+      <tr>
+        <td colspan="5" class="text-left"><strong>Total</strong></td>
+        <td><strong>${{ cart.get_total_price|floatformat:2 }}</strong></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 {% endblock content %}
