--- a/templates/inc/navbar.html
+++ b/templates/inc/navbar.html
@@ -25,6 +25,9 @@
           <a class="nav-link" href="{% url "accounts:user-login" %}">Login</a>
         </li>
       </ul>
+
+      <a class="nav-link" href="{% url 'orders:cart' %}">CART : {{cart|length}}</a>
+
     </div>
   </div>
 </nav>
