--- a/orders/templates/orders/cart.html
+++ b/orders/templates/orders/cart.html
@@ -31,5 +31,9 @@
       </tr>
     </tbody>
   </table>
+
+  <a href="{% url "orders:orders-create" %}" class="btn btn-dark" >CheckOut</a>
+
+
 </div>
 {% endblock content %}
